--- a/data/styles.css
+++ b/data/styles.css
@@ -10,9 +10,14 @@
   line-height:normal;
   text-transform:none;
 }
+.box_1 {
+}
 .box_3 {
 }
 ._图像 {
+}
+.primary_button {
+  color:#FFFFFF;
 }
 ._标题_1 {
   font-family:'Arial Normal', 'Arial';
