--- a/files/display_2/styles.css
+++ b/files/display_2/styles.css
@@ -16,7 +16,7 @@
   position:absolute;
   z-index:0;
 }
-#u111_img {
+#u114_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -24,7 +24,7 @@
   width:240px;
   height:240px;
 }
-#u111 {
+#u114 {
   border-width:0px;
   position:absolute;
   left:500px;
@@ -33,20 +33,20 @@
   height:240px;
   display:flex;
 }
-#u111 .text {
+#u114 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u111_text {
+#u114_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u112_div {
+#u115_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -61,7 +61,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u112 {
+#u115 {
   border-width:0px;
   position:absolute;
   left:848px;
@@ -70,20 +70,20 @@
   height:20px;
   display:flex;
 }
-#u112 .text {
+#u115 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u112_text {
+#u115_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u113_div {
+#u116_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -98,7 +98,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u113 {
+#u116 {
   border-width:0px;
   position:absolute;
   left:876px;
@@ -107,19 +107,19 @@
   height:16px;
   display:flex;
 }
-#u113 .text {
+#u116 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u113_text {
+#u116_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u114_div {
+#u117_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -134,7 +134,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u114 {
+#u117 {
   border-width:0px;
   position:absolute;
   left:888px;
@@ -143,83 +143,10 @@
   height:16px;
   display:flex;
 }
-#u114 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u114_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-}
-#u115_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:591px;
-  height:32px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u115 {
-  border-width:0px;
-  position:absolute;
-  left:888px;
-  top:534px;
-  width:591px;
-  height:32px;
-  display:flex;
-}
-#u115 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u115_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-}
-#u116 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  height:0px;
-}
-#u117_img {
-  border-width:0px;
-  position:absolute;
-  left:-4px;
-  top:-4px;
-  width:40px;
-  height:50px;
-}
-#u117 {
-  border-width:0px;
-  position:absolute;
-  left:844px;
-  top:589px;
-  width:30px;
-  height:40px;
-  display:flex;
-}
 #u117 .text {
   position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
@@ -227,15 +154,14 @@
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
-  visibility:hidden;
 }
 #u118_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:8px;
-  height:16px;
+  width:591px;
+  height:32px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -243,17 +169,15 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  color:#FFFFFF;
 }
 #u118 {
   border-width:0px;
   position:absolute;
-  left:855px;
-  top:596px;
-  width:8px;
-  height:16px;
+  left:888px;
+  top:534px;
+  width:591px;
+  height:32px;
   display:flex;
-  color:#FFFFFF;
 }
 #u118 .text {
   position:absolute;
@@ -264,7 +188,7 @@
 }
 #u118_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
 }
 #u119 {
@@ -287,7 +211,7 @@
   border-width:0px;
   position:absolute;
   left:844px;
-  top:652px;
+  top:589px;
   width:30px;
   height:40px;
   display:flex;
@@ -325,7 +249,7 @@
   border-width:0px;
   position:absolute;
   left:855px;
-  top:659px;
+  top:596px;
   width:8px;
   height:16px;
   display:flex;
@@ -363,7 +287,7 @@
   border-width:0px;
   position:absolute;
   left:844px;
-  top:525px;
+  top:652px;
   width:30px;
   height:40px;
   display:flex;
@@ -401,7 +325,7 @@
   border-width:0px;
   position:absolute;
   left:855px;
-  top:532px;
+  top:659px;
   width:8px;
   height:16px;
   display:flex;
@@ -439,7 +363,7 @@
   border-width:0px;
   position:absolute;
   left:844px;
-  top:716px;
+  top:525px;
   width:30px;
   height:40px;
   display:flex;
@@ -477,7 +401,7 @@
   border-width:0px;
   position:absolute;
   left:855px;
-  top:723px;
+  top:532px;
   width:8px;
   height:16px;
   display:flex;
@@ -495,7 +419,83 @@
   white-space:nowrap;
   text-transform:none;
 }
-#u128_div {
+#u128 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u129_img {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:-4px;
+  width:40px;
+  height:50px;
+}
+#u129 {
+  border-width:0px;
+  position:absolute;
+  left:844px;
+  top:716px;
+  width:30px;
+  height:40px;
+  display:flex;
+}
+#u129 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u129_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u130_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:8px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#FFFFFF;
+}
+#u130 {
+  border-width:0px;
+  position:absolute;
+  left:855px;
+  top:723px;
+  width:8px;
+  height:16px;
+  display:flex;
+  color:#FFFFFF;
+}
+#u130 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u130_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u131_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -510,7 +510,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u128 {
+#u131 {
   border-width:0px;
   position:absolute;
   left:888px;
@@ -519,83 +519,10 @@
   height:16px;
   display:flex;
 }
-#u128 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u128_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-}
-#u129_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:591px;
-  height:32px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u129 {
-  border-width:0px;
-  position:absolute;
-  left:888px;
-  top:659px;
-  width:591px;
-  height:32px;
-  display:flex;
-}
-#u129 .text {
-  position:absolute;
-  align-self:flex-start;
-  padding:0px 0px 0px 0px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u129_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-}
-#u130 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  height:0px;
-}
-#u131_img {
-  border-width:0px;
-  position:absolute;
-  left:-4px;
-  top:-4px;
-  width:40px;
-  height:50px;
-}
-#u131 {
-  border-width:0px;
-  position:absolute;
-  left:844px;
-  top:461px;
-  width:30px;
-  height:40px;
-  display:flex;
-}
 #u131 .text {
   position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
@@ -603,15 +530,14 @@
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
-  visibility:hidden;
 }
 #u132_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:8px;
-  height:16px;
+  width:591px;
+  height:32px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -619,17 +545,15 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  color:#FFFFFF;
 }
 #u132 {
   border-width:0px;
   position:absolute;
-  left:855px;
-  top:468px;
-  width:8px;
-  height:16px;
+  left:888px;
+  top:659px;
+  width:591px;
+  height:32px;
   display:flex;
-  color:#FFFFFF;
 }
 #u132 .text {
   position:absolute;
@@ -640,7 +564,7 @@
 }
 #u132_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
 }
 #u133 {
@@ -662,8 +586,8 @@
 #u134 {
   border-width:0px;
   position:absolute;
-  left:496px;
-  top:475px;
+  left:844px;
+  top:461px;
   width:30px;
   height:40px;
   display:flex;
@@ -700,8 +624,8 @@
 #u135 {
   border-width:0px;
   position:absolute;
-  left:507px;
-  top:482px;
+  left:855px;
+  top:468px;
   width:8px;
   height:16px;
   display:flex;
@@ -738,8 +662,8 @@
 #u137 {
   border-width:0px;
   position:absolute;
-  left:531px;
-  top:505px;
+  left:496px;
+  top:475px;
   width:30px;
   height:40px;
   display:flex;
@@ -776,8 +700,8 @@
 #u138 {
   border-width:0px;
   position:absolute;
-  left:542px;
-  top:512px;
+  left:507px;
+  top:482px;
   width:8px;
   height:16px;
   display:flex;
@@ -814,7 +738,7 @@
 #u140 {
   border-width:0px;
   position:absolute;
-  left:584px;
+  left:531px;
   top:505px;
   width:30px;
   height:40px;
@@ -852,7 +776,7 @@
 #u141 {
   border-width:0px;
   position:absolute;
-  left:595px;
+  left:542px;
   top:512px;
   width:8px;
   height:16px;
@@ -890,7 +814,7 @@
 #u143 {
   border-width:0px;
   position:absolute;
-  left:637px;
+  left:584px;
   top:505px;
   width:30px;
   height:40px;
@@ -928,7 +852,7 @@
 #u144 {
   border-width:0px;
   position:absolute;
-  left:648px;
+  left:595px;
   top:512px;
   width:8px;
   height:16px;
@@ -947,37 +871,7 @@
   white-space:nowrap;
   text-transform:none;
 }
-#u145_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:240px;
-  height:240px;
-}
 #u145 {
-  border-width:0px;
-  position:absolute;
-  left:146px;
-  top:499px;
-  width:240px;
-  height:240px;
-  display:flex;
-}
-#u145 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u145_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u146 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -985,7 +879,7 @@
   width:0px;
   height:0px;
 }
-#u147_img {
+#u146_img {
   border-width:0px;
   position:absolute;
   left:-4px;
@@ -993,29 +887,29 @@
   width:40px;
   height:50px;
 }
-#u147 {
+#u146 {
   border-width:0px;
   position:absolute;
-  left:679px;
+  left:637px;
   top:505px;
   width:30px;
   height:40px;
   display:flex;
 }
-#u147 .text {
+#u146 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u147_text {
+#u146_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u148_div {
+#u147_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1031,7 +925,113 @@
   box-shadow:none;
   color:#FFFFFF;
 }
+#u147 {
+  border-width:0px;
+  position:absolute;
+  left:648px;
+  top:512px;
+  width:8px;
+  height:16px;
+  display:flex;
+  color:#FFFFFF;
+}
+#u147 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u147_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u148_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+}
 #u148 {
+  border-width:0px;
+  position:absolute;
+  left:146px;
+  top:499px;
+  width:240px;
+  height:240px;
+  display:flex;
+}
+#u148 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u148_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u149 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u150_img {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:-4px;
+  width:40px;
+  height:50px;
+}
+#u150 {
+  border-width:0px;
+  position:absolute;
+  left:679px;
+  top:505px;
+  width:30px;
+  height:40px;
+  display:flex;
+}
+#u150 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u150_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u151_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:8px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#FFFFFF;
+}
+#u151 {
   border-width:0px;
   position:absolute;
   left:690px;
@@ -1041,19 +1041,19 @@
   display:flex;
   color:#FFFFFF;
 }
-#u148 .text {
+#u151 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u148_text {
+#u151_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u149_div {
+#u152_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1068,7 +1068,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u149 {
+#u152 {
   border-width:0px;
   position:absolute;
   left:888px;
@@ -1077,14 +1077,90 @@
   height:16px;
   display:flex;
 }
-#u149 .text {
+#u152 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u149_text {
+#u152_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u153_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u153 {
+  border-width:0px;
+  position:absolute;
+  left:386px;
+  top:855px;
+  width:140px;
+  height:40px;
+  display:flex;
+}
+#u153 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u153_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u154_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:346px;
+  height:92px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+  text-align:center;
+}
+#u154 {
+  border-width:0px;
+  position:absolute;
+  left:283px;
+  top:930px;
+  width:346px;
+  height:92px;
+  display:flex;
+  font-size:20px;
+  text-align:center;
+}
+#u154 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u154_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
