--- a/files/off/styles.css
+++ b/files/off/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-447px;
-  width:346px;
+  left:-248px;
+  width:365px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -16,37 +16,7 @@
   position:absolute;
   z-index:0;
 }
-#u0_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:240px;
-  height:240px;
-}
-#u0 {
-  border-width:0px;
-  position:absolute;
-  left:500px;
-  top:500px;
-  width:240px;
-  height:240px;
-  display:flex;
-}
-#u0 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u0_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u1_div {
+#u189_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -61,28 +31,68 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u1 {
+#u189 {
   border-width:0px;
   position:absolute;
-  left:550px;
-  top:812px;
+  left:360px;
+  top:840px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u1 .text {
+#u189 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u1_text {
+#u189_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u2_div {
+#u190_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:365px;
+  height:330px;
+  background:inherit;
+  background-color:rgba(0, 0, 0, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u190 {
+  border-width:0px;
+  position:absolute;
+  left:248px;
+  top:414px;
+  width:365px;
+  height:330px;
+  display:flex;
+}
+#u190 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u190_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u191_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -99,25 +109,25 @@
   font-size:20px;
   text-align:center;
 }
-#u2 {
+#u191 {
   border-width:0px;
   position:absolute;
-  left:447px;
-  top:880px;
+  left:257px;
+  top:905px;
   width:346px;
   height:92px;
   display:flex;
   font-size:20px;
   text-align:center;
 }
-#u2 .text {
+#u191 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u2_text {
+#u191_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
