--- a/files/display_1_default/styles.css
+++ b/files/display_1_default/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-155px;
-  width:910px;
+  left:-170px;
+  width:895px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -589,8 +589,8 @@
 #u33 {
   border-width:0px;
   position:absolute;
-  left:155px;
-  top:335px;
+  left:170px;
+  top:601px;
   width:140px;
   height:40px;
   display:flex;
@@ -1001,77 +1001,51 @@
   word-wrap:break-word;
   text-transform:none;
 }
+#u43_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:233px;
+  height:233px;
+}
 #u43 {
   border-width:0px;
   position:absolute;
-  left:507px;
-  top:501px;
-  width:240px;
-  height:241px;
-}
-#u43_state0 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:240px;
-  height:241px;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u43_state0_content {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u44_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:229px;
-  height:231px;
-}
-#u44 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:229px;
-  height:231px;
+  left:502px;
+  top:504px;
+  width:233px;
+  height:233px;
   display:flex;
 }
-#u44 .text {
+#u43 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u44_text {
+#u43_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u43_state1 {
+#u44 {
+  border-width:0px;
+  position:absolute;
+  left:499px;
+  top:501px;
+  width:240px;
+  height:240px;
+}
+#u44_state0 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
-  height:241px;
+  height:240px;
   -ms-overflow-x:hidden;
   overflow-x:hidden;
   -ms-overflow-y:hidden;
@@ -1082,9 +1056,8 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  visibility:hidden;
 }
-#u43_state1_content {
+#u44_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1103,8 +1076,8 @@
 #u45 {
   border-width:0px;
   position:absolute;
-  left:-5px;
-  top:-5px;
+  left:0px;
+  top:0px;
   width:240px;
   height:240px;
   display:flex;
@@ -1122,13 +1095,13 @@
   text-transform:none;
   visibility:hidden;
 }
-#u43_state2 {
+#u44_state1 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
-  height:241px;
+  height:240px;
   -ms-overflow-x:hidden;
   overflow-x:hidden;
   -ms-overflow-y:hidden;
@@ -1141,7 +1114,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u43_state2_content {
+#u44_state1_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1160,8 +1133,8 @@
 #u46 {
   border-width:0px;
   position:absolute;
-  left:-5px;
-  top:-5px;
+  left:0px;
+  top:0px;
   width:240px;
   height:240px;
   display:flex;
@@ -1174,6 +1147,227 @@
   width:100%;
 }
 #u46_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u44_state2 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  visibility:hidden;
+}
+#u44_state2_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u47_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+}
+#u47 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+  display:flex;
+}
+#u47 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u47_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u48 {
+  position:absolute;
+  left:499px;
+  top:504px;
+}
+#u48_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u48_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u49_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+}
+#u49 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+  display:flex;
+}
+#u49 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u49_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u48_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:260px;
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  visibility:hidden;
+}
+#u48_state1_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u50_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+}
+#u50 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:20px;
+  width:240px;
+  height:240px;
+  display:flex;
+}
+#u50 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u50_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u48_state2 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:210px;
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  visibility:hidden;
+}
+#u48_state2_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u51_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+}
+#u51 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:-30px;
+  width:240px;
+  height:240px;
+  display:flex;
+  -webkit-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -ms-transform:rotate(180deg);
+  transform:rotate(180deg);
+}
+#u51 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u51_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
