--- a/files/on_anime/styles.css
+++ b/files/on_anime/styles.css
@@ -162,58 +162,47 @@
   word-wrap:break-word;
   text-transform:none;
 }
-#u11_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:488px;
-  height:1037px;
-}
 #u11 {
-  border-width:0px;
   position:absolute;
-  left:374px;
-  top:356px;
-  width:488px;
-  height:1037px;
-  display:flex;
+  left:493px;
+  top:497px;
 }
-#u11 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u11_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u12_div {
-  border-width:0px;
-  position:absolute;
+#u11_state0 {
+  position:relative;
   left:0px;
   top:0px;
-  width:140px;
-  height:40px;
-  background:inherit;
-  background-color:rgba(22, 155, 213, 1);
+  width:247px;
+  height:247px;
+  background-image:none;
   border:none;
-  border-radius:5px;
+  border-radius:0px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
 }
+#u11_state0_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u12_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:247px;
+  height:247px;
+}
 #u12 {
   border-width:0px;
   position:absolute;
-  left:466px;
-  top:200px;
-  width:140px;
-  height:40px;
+  left:0px;
+  top:0px;
+  width:247px;
+  height:247px;
   display:flex;
 }
 #u12 .text {
@@ -227,8 +216,39 @@
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
+  visibility:hidden;
 }
-#u13_div {
+#u13_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:488px;
+  height:1037px;
+}
+#u13 {
+  border-width:0px;
+  position:absolute;
+  left:374px;
+  top:356px;
+  width:488px;
+  height:1037px;
+  display:flex;
+}
+#u13 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u13_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u14_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -243,7 +263,43 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u13 {
+#u14 {
+  border-width:0px;
+  position:absolute;
+  left:466px;
+  top:200px;
+  width:140px;
+  height:40px;
+  display:flex;
+}
+#u14 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u14_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u15_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u15 {
   border-width:0px;
   position:absolute;
   left:634px;
@@ -252,14 +308,14 @@
   height:40px;
   display:flex;
 }
-#u13 .text {
+#u15 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u13_text {
+#u15_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
